reversed notification rendering logic for cleaner rendering

--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
 
 <div style="top: 0; left: 0; width:100%; height:100%; display: table; position: absolute;">
 	<div align="center" style="max-width: 50%; display: table-cell; vertical-align: middle; margin: 0 5px;">
-		<div class="alert" id="alertnotification">
-			<span class="alertclosebtn" onclick="notificationClosed('click');;">&times;</span> 
+		<div class="alert" id="alertnotification" style="display: none;">
+			<span class="alertclosebtn" onclick="notificationClosed('click');">&times;</span> 
 			<table>
 				<tr>
 					<td style="width:15%; text-align: right; padding: 2% 1% 1% 2%;">
