--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<h2>Info</h2>
 	<p>
 		Author: <a href="https://www.linkedin.com/in/sennejanssens/" target="_blank">Senne Janssens</a> ( Send me a message with feedback or suggestions ;) )<br>
-		Version: <span id="currentappversion">20200115.3</span> <br>
+		Version: <span id="currentappversion">20200117.1</span> <br>
 		Release notes: <a href="https://github.com/Lefky/lefky.github.io/commits/master"target="_blank">Check the master branch on Github</a>
 	</p>
 	<p>
@@ -59,7 +59,7 @@
 
 <div style="top: 0; left: 0; width:100%; height:100%; display: table; position: absolute;">
 	<div align="center" style="max-width: 50%; display: table-cell; vertical-align: middle; margin: 0 5px;">
-		<div class="alert" id="alertnotification" style="display: none;">
+		<div class="alert slide-in" id="alertnotification" style="display: none;">
 			<span class="alertclosebtn" onclick="notificationClosed('click');">&times;</span> 
 			<table>
 				<tr>
