--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<h2>Info</h2>
 	<p>
 		Author: <a href="https://www.linkedin.com/in/sennejanssens/" target="_blank">Senne Janssens</a> ( Send me a message with feedback or suggestions ;) )<br>
-		Version: <span id="currentappversion">20200117.1</span> <br>
+		Version: <span id="currentappversion">20200120.1</span> <br>
 		Release notes: <a href="https://github.com/Lefky/lefky.github.io/commits/master"target="_blank">Check the master branch on Github</a>
 	</p>
 	<p>
@@ -172,7 +172,7 @@
 	};
 </script>
 <!-- Moment.js -->
-<script src="js/moment.js"></script><!-- https://momentjs.com/docs -->
+<script src="js/moment.min.js"></script><!-- https://momentjs.com/docs -->
 <script>
 	moment().format();
 </script>
