more bootstrap styling (left column)

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 				</tr>
 			</table>
 		</div>
-		<div class="column" id="column1" style="">
+		<!--<div class="column" id="column1" style="">
 			<p>
 				<span class="tooltip" tooltip="Your start time is entered automatically based on the time of opening this window, but you can make adjustments. 
 											Set this page as your starting page when opening your browser to make it easy for yourself."><i class="far fa-info-circle greyed"></i></span>
@@ -135,11 +135,11 @@
 			</p>
 			<div id="history" style=""></div>
 			<!--<textarea id="history2" rows="6" cols="50" style=""></textarea>-->
-			<div style="font-size: 40%; float: right; clear: both; width: 100%;">
+			<!--<div style="font-size: 40%; float: right; clear: both; width: 100%;">
 				<span><label class="switch"><input type="checkbox" id="nosave"><span class="slider round" id="checkred"></span></label> Don't save today.</span>&nbsp;&nbsp;&nbsp;
 				<span><label class="switch"><input type="checkbox" id="autoend"><span class="slider round"></span></label> Automatically set end time on close.</span>&nbsp;&nbsp;&nbsp;
 				<span><label class="switch"><input type="checkbox" id="startmin5"><span class="slider round"></span></label> Subtract 5 min from open.</span>
-			</div>
+			</div>-->
 		</div>
 		<div class="column" id="column2" style="">
 			<p>
@@ -166,68 +166,79 @@
 
 <div class="container-fluid">
 	<div class="row">
-		<div class="col text-right">
-			<p>
-				<span class="tooltip" tooltip="Your start time is entered automatically based on the time of opening this window, but you can make adjustments. 
-											Set this page as your starting page when opening your browser to make it easy for yourself."><i class="far fa-info-circle greyed"></i></span>
-			</p>
-			
+		<div class="col col-sm-2 bg-light"></div>
+		<div class="col col-sm-4 rounded-right bg-light text-right">
 			<div class="form-group">
-				<label for="start_time" data-toggle="tooltip" title="Your start time is entered automatically based on the time of opening this window, but you can make adjustments. Set this page as your starting page when opening your browser to make it easy for yourself.">Start time :</label>
-				<input name="start_time" id="start_time" type="time" class="form-control" onchange="calculateTotal();"/>
+				<div class="input-group my-3">
+					<label for="start_time" data-toggle="tooltip" data-placement="left" title="Your start time is entered automatically based on the time of opening this window, but you can make adjustments. Set this page as your starting page when opening your browser to make it easy for yourself.">Start time : </label>
+					<input name="start_time" id="start_time" type="time" class="form-control col-sm-2 mx-1" onchange="calculateTotal();"/>
+				</div>
+				<div class="input-group my-3">
+					<label for="break_time" data-toggle="tooltip"data-placement="left" title="Choose a default break you take every day. Eg: You're deducted 30 min every day. This value will be saved for the next time the window is opened.You can enter a seperate value manually or by using the buttons too.">
+						Break (default 
+						<select name="break_time_default" id="break_time_default" class="form-control mx-1" onchange="addBreakDefault();">
+							<option value="0">0 min</option>
+							<option value="0.25">15 min</option>
+							<option value="0.5">30 min</option>
+							<option value="0.75">45 min</option>
+							<option value="1">1h</option>
+						</select>) : 				
+					</label>
+					<input name="break_time" id="break_time" type="time" value="00:00" class="form-control col-sm-2 mx-1" onchange="calculateTotal();"/>
+				</div>
+				<div class="input-group my-3">
+					<label for="end_time" data-toggle="tooltip"data-placement="left" title="You can have this automatically filled in by setting the parameter at the bottom of the box. You can manually enter a value.">Time to go home : </label>
+					<input name="end_time" id="end_time" type="time" class="form-control col-sm-2 mx-1" onchange="calculateTotal();"/>
+				</div>
+				<div class="input-group my-3">
+					<label for="totalnobreak" data-toggle="tooltip"data-placement="left" title="These hours are your actual working hours.">Total hours (no break) : </label>
+					<input name="totalnobreak" id="totalnobreak" type="time" class="form-control col-sm-2 mx-1" value="" readonly> <input name="totalnobreakdec" id="totalnobreakdec" type="text" class="form-control col-sm-2 mx-1" readonly>
+				</div>
+				<div class="input-group my-3">
+					<label for="overtime" data-toggle="tooltip"data-placement="left" title="Select howmany hours you need to perform on avarage each day. The application will calculate howmuch overtime you built up / used today.">
+						Overtime@
+						<select name="hourschedule" id="hourschedule" class="form-control mx-1" onchange="calculateTotal();">
+							<option value="7.6">7,6h</option>
+							<option value="8">8h</option>
+						</select>: 
+					</label>
+					<input name="overtime" id="overtime" type="text" class="form-control col-sm-2 mx-1" readonly> <input name="overtimedec" id="overtimedec" type="text" class="form-control col-sm-2 mx-1" readonly>
+				</div>
+				<div class="input-group my-3">
+					<label for="total" data-toggle="tooltip"data-placement="left" title="These hours are howmuch time you spent being at your workplace.">Total hours : </label>
+					<input name="total" id="total" type="time" class="form-control col-sm-2 mx-1" readonly><input name="totaldec" id="totaldec" type="text" class="form-control col-sm-2 mx-1" readonly>
+				</div>
+				<div class="input-group my-3">
+					<label for="overtimetotal" data-toggle="tooltip"data-placement="left" title="Here you can find howmuch overtime you've built up / used during the period you defined in the 'Info' box. This value doesn't include today yet.">Total overtime : </label>
+					<input name="overtimetotal" id="overtimetotal" type="text" class="form-control col-sm-2 mx-1" readonly>
+				</div>
+				
+				<div id="history" class="my-3"></div>
 			</div>
-			
-			
-			
-			
-			<p>
-				<span class="tooltip" tooltip="Choose a default break you take every day. 
-												Eg: You're deducted 30 min every day. 
-												This value will be saved for the next time the window is opened.
-												You can enter a seperate value manually or by using the buttons too."><i class="far fa-info-circle greyed"></i></span>
-				Break (default 
-				<select name="break_time_default" id="break_time_default" onchange="addBreakDefault();">
-					<option value="0">0 min</option>
-					<option value="0.25">15 min</option>
-					<option value="0.5">30 min</option>
-					<option value="0.75">45 min</option>
-					<option value="1">1h</option>
-				</select>) : 
-				<input name="break_time" id="break_time" type="time" value="00:00" onchange="calculateTotal();" />
-			</p>
-			<p>
-				<span class="tooltip" tooltip="You can have this automatically filled in by setting the parameter at the bottom of the box.
-												You can manually enter a value."><i class="far fa-info-circle greyed"></i></span>
-				Time to go home : <input name="end_time" id="end_time" type="time" onchange="calculateTotal();" />
-			</p>
-			<p>
-				<span class="tooltip" tooltip="These hours are your actual working hours."><i class="far fa-info-circle greyed"></i></span>
-				Total hours (no break) : <input type="time" name="totalnobreak" id="totalnobreak" value="" readonly> <input type="text" name="totalnobreakdec" id="totalnobreakdec" value="" maxlength="4" size="5" readonly>
-			</p>
-			<p>
-				<span class="tooltip" tooltip="Select howmany hours you need to perform on avarage each day.
-												The application will calculate howmuch overtime you built up / used today."><i class="far fa-info-circle greyed"></i></span>
-				Overtime@
-				<select name="hourschedule" id="hourschedule" onchange="calculateTotal();">
-					<option value="7.6">7,6h</option>
-					<option value="8">8h</option>
-				</select>
-				: <input type="text" name="overtime" id="overtime" value="" maxlength="4" size="5" readonly> <input type="text" name="overtimedec" id="overtimedec" value="" maxlength="4" size="5" readonly></p>
-			<p>
-				<span class="tooltip" tooltip="These hours are howmuch time you spent being at your workplace."><i class="far fa-info-circle greyed"></i></span>
-				Total hours : <input type="time" name="total" id="total" value="" readonly> <input type="text" name="totaldec" id="totaldec" value="" maxlength="4" size="5" readonly>
-			</p>
-			<p>
-				<span class="tooltip" tooltip="Here you can find howmuch overtime you've built up / used during the period you defined in the 'Info' box.
-												This value doesn't include today yet."><i class="far fa-info-circle greyed"></i></span>
-				Total overtime : <input type="text" name="overtimetotal" id="overtimetotal" maxlength="4" size="5" readonly>
-			</p>
-			<div id="history" style=""></div>
+			<div class="row">
+				<div class="col">
+					<div class="input-group">
+					<div class="custom-control custom-switch mx-1">
+						<input type="checkbox" class="custom-control-input checkred bg-danger" id="nosave">
+						<label class="custom-control-label font-sm" for="nosave">Don't save today</label>
+					</div>
+					<div class="custom-control custom-switch mx-1">
+						<input type="checkbox" class="custom-control-input" id="autoend">
+						<label class="custom-control-label font-sm" for="autoend">Automatically set end time on close</label>
+					</div>
+					<div class="custom-control custom-switch mx-1">
+						<input type="checkbox" class="custom-control-input" id="startmin5">
+						<label class="custom-control-label font-sm" for="startmin5">Subtract 5 min from open</label>
+					</div>
+					</div>
+				</div>
+			</div>
+
 		</div>
-		<div class="col">
-		
-		rhtrzrjr
+		<div class="col col-sm-4">	
+			rhtrzrjr
 		</div>
+		<div class="col col-sm-2"></div>
 	</div>
 </div>
 
@@ -245,7 +256,7 @@
 </div>
 </body>
 <!-- jQuery -->
-<script src="js/jquery.min.js"></script>
+<!--<script src="js/jquery.min.js"></script>		SEE BOOTSTRAP SECTION
 <!-- jQuery Modal -->
 <script src="js/jquery.modal.min.js"></script><!-- https://jquerymodal.com/ -->
 <link rel="stylesheet" href="css/jquery.modal.min.css" />
